summative.moria.Moria.scala.error
Compilation error:
Moria:3: error: not found: value isOver
  while (isOver == false ){
         ^Moria:5: error: not found: value isOver
      isOver = true
      ^